# old_ml_work_placeholder

./: Evolutionary.ipynb  README.MD  Resnet12_notebook.ipynb  conv_notebook.ipynb  hands_on_ml_with_sklearn.ipynb  main.py  pyproject.toml  scikit_learn.ipynb  utils.py
