[tool.poetry]
name = "machine_learning_work"
version = "0.1.0"
description = ""
authors = ["carnivore7777 <antgiannoulopoulos@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
jupyter = "^1.0.0"
ipython = "^8.4.0"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
